trying to fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,16 @@ body {
   max-width: 100%;
 }
 
-
 * {
   box-sizing: border-box;
-  max-width: 100vw; 
+  max-width: 100vw;
+}
+
+html,
+body {
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+  max-width: 100%;
+  height: 100%;
+  position: fixed; /* Prevent content shift */
+  overscroll-behavior: contain; /* Prevent extra scroll bounce */
 }
